<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fr.ul.miage</groupId>
  <artifactId>GenieLogiciel</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>GenieLogiciel</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <!-- Les variables de configuration pour le pluging             -->
		<!-- appassembler-maven-plugin qui crée une distribution binaire -->
		<!--  ======================================================     -->
		<!-- Où stocker la distribution binaire -->
		<project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
		<!-- Nom de la classe principale -->
		<project.main.classname>${project.groupId}.${project.artifactId}.App</project.main.classname>
		<!-- Nom de la classe principale -->
		<project.bin.appname>run</project.bin.appname>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.8</version>
		</dependency>
	    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>2.1.2</version>
        </dependency>
		
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <!-- Plugin qui crée le dossier bindist qui contient une distribution binaire -->
			<!-- ======================================================================== -->
			<plugin>
				<!-- create bat scripts for apps -->
				<!-- mvn package | appassembler:assemble -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.10</version>
				<executions>
					<execution>
						<id>win</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
						<configuration>
							<assembleDirectory>${project.bindist.dir}</assembleDirectory>
							<repositoryLayout>flat</repositoryLayout>
							<extraJvmArguments>--module-path %JAVAFX_HOME%/lib --add-modules javafx.controls,javafx.fxml</extraJvmArguments>
							<programs>
								<program>
									<platforms>
										<platform>windows</platform>
									</platforms>
									<mainClass>${project.main.classname}</mainClass>
									<id>${project.bin.appname}</id>
								</program>
							</programs>
						</configuration>
					</execution>
					<execution>
						<id>unix</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
						<configuration>
							<assembleDirectory>${project.bindist.dir}</assembleDirectory>
							<repositoryLayout>flat</repositoryLayout>
							<extraJvmArguments>--module-path $JAVAFX_HOME/lib --add-modules javafx.controls,javafx.fxml</extraJvmArguments>
							<programs>
								<program>
									<platforms>
										<platform>unix</platform>
									</platforms>
									<mainClass>${project.main.classname}</mainClass>
									<id>${project.bin.appname}</id>
								</program>
							</programs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Plugin qui crée l'archive zip contenant la distribution source dans le dossier target -->
			<!-- NB : ce plugin utilise un fichier annexe : zip.xml                                    -->
			<!-- ===================================================================================== -->
			<plugin>
				<!-- create a distribution archive -->
				<!-- mvn install ou assembly:single -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>make-zip</id>
						<phase>install</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>zip.xml</descriptor>
							</descriptors>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
    </plugins>
  </build>
</project>
